<resources>
    <string name="app_name">GameAlike</string>
    <string-array name="genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>RPG</item>
        <item>Strategy</item>
        <item>Sports</item>
        <item>Puzzle</item>
        <item>Simulation</item>
    </string-array>
    <string name="configGenresToast">Please select at least one genre</string>
    <string name="configGenresBanner">What genres do you enjoy?</string>
    <string name="loginEmailHint">Email or Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginLoginText">Login</string>
    <string name="loginForgotText">Forgot Password?</string>
    <string name="loginSignupText">Don\'t have an account? Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_profile">Profile</string>
    <string name="title_game_info">Information</string>
    <string name="game_tag_default">Game Tag</string>
    <string name="game_date_prefix">"Released on "</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
</resources>